--- a/.github/workflows/main_afernandez-iebank-frontend.yml
+++ b/.github/workflows/main_afernandez-iebank-frontend.yml
@@ -46,6 +46,10 @@ jobs:
         with:
           name: node-app
 
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
